# arcon

./: .gitignore  .gitmodules  404.html  CONTRIBUTING.md  Cargo.toml  README.md  azure-pipelines.yml  index.html  robots.txt  run_checks.sh  rust-toolchain  rustfmt.toml  search_index.en.js  shell.nix  sitemap.xml
arc-codegen/core/: Cargo.toml
arc-codegen/core/examples/: filter_map.rs
arc-codegen/core/messages/capnproto/: Cargo.toml  build.rs
arc-codegen/core/messages/src/: lib.rs
arc-codegen/core/src/: destination.rs  error.rs  lib.rs  module.rs  util.rs  weld_future.rs
arc-codegen/core/src/components/: .task_manager.rs.swo  dispatcher.rs  io.rs  mod.rs  task.rs  task_manager.rs
arc-codegen/core/src/weld/: future.rs  mod.rs  module.rs  util.rs
arc-codegen/core/state-backend/: Cargo.toml
arc-codegen/core/state-backend/src/: in_memory.rs  lib.rs
arcc/: .gitignore  Cargo.toml  README.md
arcc/arcon/: Cargo.toml  LICENSE  README.md  build.rs
arcc/arcon/arcon_backend/: Cargo.toml
arcc/arcon/arcon_backend/src/: lib.rs
arcc/arcon/arcon_error/src/: lib.rs
arcc/arcon/arcon_extra/src/: lib.rs
arcc/arcon/arcon_macros/: LICENSE  README.md
arcc/arcon/arcon_macros/src/: lib.rs
arcc/arcon/arcon_messages/: Cargo.toml
arcc/arcon/arcon_messages/src/: lib.rs
arcc/arcon/benches/: weld.rs
arcc/arcon/src/: error.rs  lib.rs
arcc/arcon/src/data/: mod.rs
arcc/arcon/src/kafka/: mod.rs
arcc/arcon/src/messages/: mod.rs
arcc/arcon/src/state_backend/: in_memory.rs  mod.rs
arcc/arcon/src/streaming/: mod.rs
arcc/arcon/src/util/: event_timer.rs  io.rs  mod.rs
arcc/arcon/src/weld/: module.rs
arcc/codegen/: Cargo.toml
arcc/codegen/src/: lib.rs  sink.rs  source.rs  stream_task.rs  system.rs  task.rs
arcc/codegen/tests/: codegen_tests.rs
arcc/codegen/tests/run-pass/: basic_system.rs  basic_task.rs
arcc/compiler/: Cargo.toml
arcc/compiler/src/: cargo.rs  env.rs  lib.rs
arcc/core/: Cargo.toml
arcc/grpc/: Cargo.toml  build.rs
arcc/grpc/src/: lib.rs
arcc/runtime/: Cargo.toml
arcc/runtime/akka-api/: Cargo.toml  build.rs
arcc/runtime/examples/: filter_map.rs
arcc/runtime/macros/: Cargo.toml
arcc/runtime/messages/: Cargo.toml
arcc/runtime/src/: error.rs  lib.rs
arcc/spec/: Cargo.toml
arcc/spec/src/: lib.rs
arcc/src/: cargo.rs  env.rs  main.rs  repl.rs  server.rs  util.rs
arcon/: Cargo.toml
arcon/arcon_allocator/: Cargo.toml  README.md
arcon/arcon_state/: Cargo.toml  README.md
arcon/arcon_state/src/: data.rs  error.rs
arcon/src/: lib.rs
arcon/src/application/: assembled.rs  builder.rs  mod.rs
arcon/src/control_plane/: mod.rs
arcon/src/data/: arrow.rs  flight_serde.rs  mod.rs  partition.rs  ser_id.rs
arcon/src/dataflow/: api.rs  builder.rs  conf.rs  constructor.rs  dfg.rs  mod.rs  stream.rs
arcon/src/error/: mod.rs
arcon/src/index/: mod.rs
arcon/src/manager/: node.rs  source.rs
arcon/src/metrics/: ewma.rs  perf_event.rs
arcon/src/stream/: mod.rs
arcon/src/table/: mod.rs
arcon/src/test/: arcon_distributed.rs  keyby_integration.rs  mod.rs
arcon/src/util/: system_killer.rs
arcon_allocator/: Cargo.toml  LICENSE  README.md
arcon_allocator/src/: lib.rs
arcon_extra/: Cargo.toml
arcon_macros/: Cargo.toml  README.md
arcon_macros/src/: app.rs  arcon.rs  arrow.rs  decoder.rs  lib.rs  proto.rs  state.rs
arcon_macros/tests/: decoder_test.rs
arcon_state/: Cargo.toml  README.md
arcon_state/arcon_state_derive/: Cargo.toml
arcon_state/arcon_state_derive/src/: lib.rs
arcon_state/benches/: appender.rs  hash.rs  hash_table.rs  map.rs  timer.rs  value.rs
arcon_state/src/: error.rs  lib.rs
arcon_state/src/backend/: handles.rs  macros.rs  metrics_utils.rs  mod.rs  ops.rs  serialization.rs
arcon_state/src/index/: mod.rs
arcon_state/tests/: mod.rs
arcon_tests/: Cargo.toml  build.rs
arcon_tests/src/: basic_v3.proto  lib.rs  proto_derive_test.rs
arcon_util/: Cargo.toml  README.md
arcon_util/src/: lib.rs
examples/: Cargo.toml  collection.rs  custom_operator.rs  file.rs  kafka_source.rs  stateful.rs  window.rs
execution-plane/arcon/: Cargo.toml  README.md
execution-plane/arcon/arcon_allocator/: Cargo.toml  README.md
execution-plane/arcon/arcon_backend/: Cargo.toml  README.md
execution-plane/arcon/arcon_error/: Cargo.toml  README.md
execution-plane/arcon/arcon_extra/: Cargo.toml  README.md
execution-plane/arcon/arcon_macros/: Cargo.toml  README.md
execution-plane/arcon/arcon_messages/: Cargo.toml  README.md  build.rs
execution-plane/arcon/arcon_state/: Cargo.toml  README.md
execution-plane/arcon/arcon_tui/: .Cargo.toml.swp  README.md
execution-plane/arcon/benches/: allocator.rs  buffer_pool.rs  common.rs  flight_serde.rs  hash.rs  main.rs  node.rs  serde.rs  weld.rs  window.rs
execution-plane/arcon/experiments/: Cargo.toml  README.md  nexmark_config.toml  state-backend-perf.sh
execution-plane/arcon/proto_tests/: Cargo.toml  build.rs
execution-plane/arcon/src/: lib.rs
execution-plane/arcon/tests/: basic_pipeline_tests.rs  recovery_tests.rs
execution-plane/arcon_codegen/: Cargo.toml  README.md
execution-plane/arcon_codegen/src/: common.rs  function.rs  lib.rs  sink.rs  source.rs  stream_task.rs  system.rs  types.rs  window.rs
execution-plane/arcon_codegen/tests/: codegen_tests.rs
execution-plane/arcon_compiler/: Cargo.toml  README.md
execution-plane/arcon_compiler/grpc/: build.rs
execution-plane/arcon_compiler/src/: env.rs  main.rs  server.rs  util.rs
execution-plane/arcon_spec/: Cargo.toml  README.md
execution-plane/arcon_spec/src/: lib.rs
execution-plane/arcon_tui/: Cargo.toml
execution-plane/arcon_tui/src/: update.rs
guide/examples/: Cargo.toml  arcon.conf  build.rs
guide/examples/src/: event.proto  lib.rs  snapshot_component.rs
protobuf/: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain
protobuf/proto/arcon_spec/: arcon_spec.proto
protobuf/proto/arconc/: arconc.proto
protobuf/proto/operational_plane/: messages.proto
protobuf/src/: lib.rs
rust/operator/: Cargo.toml
rust/operator/src/: akka.rs  io.rs  lib.rs
(+891 files in other folders)
