[package]
name = "arcon"
version = "0.1.3"
authors = ["Max Meldrum <mmeldrum@kth.se>"]
edition = "2018"
readme = "README.md"
license = "AGPL-3.0-only"
repository = "https://github.com/cda-group/arcon"
homepage = "https://github.com/cda-group/arcon"
description = """
A runtime for writing streaming applications
"""

[workspace]
members = [
    "arcon_build",
    "arcon_tests",
    "arcon_shell",
    "arcon_examples"
]

# TODO fix these later again
exclude = [
    "arcon_tui",
    "experiments",
]

[features]
default = ["serde"]
arcon_serde = ["serde_json", "bincode", "serde", "uuid/serde"]
unsafe_flight = ["abomonation", "abomonation_derive", "arcon_macros/unsafe_flight"]
kafka = ["rdkafka", "futures", "serde_json", "serde"]
thread_pinning = ["kompact/thread_pinning"]
socket = ["tokio-util", "futures", "serde_json", "serde"]
hardware_counters = ["perf-event", "metrics"]
prometheus_exporter = ["metrics-exporter-prometheus", "metrics"]
allocator_metrics = ["arcon_allocator/metrics"]

# state features
rocksdb = ["arcon_state/rocks"]

[dependencies]
arcon_macros = { version = "0.1", path = "arcon_macros" }
arcon_state = { version = "0.1", path = "arcon_state" }
arcon_allocator = { version = "0.1", path = "arcon_allocator" }

kompact = { git = "https://github.com/kompics/kompact.git", branch = "master" }
uuid = "0.8"
cfg-if = "0.1.10"
crossbeam-utils = "0.7"
num_cpus = "1.0"
hierarchical_hash_wheel_timer = "1.1"
hocon = { version = "0.3", default-features = false, features = ["serde-support"] }
snafu = "0.6"

# Logging
slog = "2"
slog-async = "2"
slog-term = "2"

# Hashing
fxhash = "0.2.1"
twox-hash = "1.5.0"

# Serialisation
prost = "0.7"
prost-types = "0.7"
bytes = "1.0"


arrow = "4.3"
datafusion = "4.0"

# Optional
rdkafka = { version = "0.26", optional = true }
tokio = { version = "1.0", features = ["full"] } # TODO: figure out which are truly needed
tokio-util = { version = "0.6", optional = true, features = ["full"] }
futures = { version = "0.3", optional = true }
serde_json = { version = "1.0.44", optional = true }
serde = { version = "1.0.104", features = ["derive"], optional = true }
bincode = { version = "1.2.1", optional = true }
rayon = { version = "1.3.0", optional = true }
abomonation = { version = "0.7.3", optional = true }
abomonation_derive = { version = "0.5.0", optional = true }


metrics = { version = "0.16.0", optional = true }
metrics-exporter-prometheus = { version = "0.5.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
perf-event = { version = "0.4.7", optional = true }


[dev-dependencies]
tempfile = "3"
rand = "0.6.5"
slog = { version = "2.2", features = ["max_level_error"] }
criterion = { version = "0.3" }
bincode = "1.1.4"
serde = { version = "1.0.63", features = ["derive"] }
lz4-compression = "0.6.1"
once_cell = "1.3.1"
abomonation = "0.7.3"
abomonation_derive = "0.5.0"


[[bench]]
name = "allocator"
harness = false

[[bench]]
name = "buffer_pool"
harness = false

[[bench]]
name = "serde"
harness = false

[[bench]]
name = "hash"
harness = false