[package]
name = "arcc"
version = "0.1.0"
authors = ["Max Meldrum <mmeldrum@kth.se>"]
edition = "2018"

[dependencies]
codegen = { path = "codegen" }
spec = { path = "spec" }
cargo = "0.35.0"
clap = "2.33.0"
failure = "0.1.5"
lazy_static = "1.3.0"

ferris-says = "0.1"
indicatif = "0.11.0"
log = "0.4"
pretty_env_logger = "0.3"

[workspace]
members = [
    "core",
    "codegen",
    "spec",
]
