[package]
name = "arcc"
version = "0.1.0"
authors = ["Max Meldrum <mmeldrum@kth.se>"]
description = """
arcc is a backend compiler targeting the Arcon runtime.
"""
edition = "2018"
repository = "https://github.com/cda-group/arcon"
readme = "README.md"

[[bin]]
bench = false
path = "src/main.rs"
name = "arcc"

[workspace]
members = [
    "codegen",
    "arcon",
    "spec",
    "grpc",
]

exclude = [
    "spec.json",
]

[dependencies]
codegen = { path = "codegen" }
grpc = { path = "grpc" }
spec = { path = "spec" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
clap = "2.33.0"
failure = "0.1.5"
lazy_static = "1.3.0"

# Logging/Reporting
ferris-says = "0.1"
indicatif = "0.11.0"
log = "0.4"
pretty_env_logger = "0.3"
