[package]
name = "arcon_allocator"
version = "0.1.0"
authors = ["Max Meldrum <mmeldrum@kth.se>"]
edition = "2018"

[features]
allocator_metrics = ["metrics-exporter-prometheus", "metrics"]


[dependencies]
fxhash = "0.2.1"
snafu = "0.6"

metrics = { version = "0.16.0", optional = true }
metrics-exporter-prometheus = { version = "0.5.0", optional = true }
