[package]
name = "arcon_macros"
version = "0.1.3"
authors = ["Max Meldrum <mmeldrum@kth.se>"]
readme = "README.md"
license = "AGPL-3.0-only"
repository = "https://github.com/cda-group/arcon"
homepage = "https://github.com/cda-group/arcon"
description = """
Macros for Arcon
"""
edition = "2018"

[features]
arcon_serde = []
unsafe_flight = []

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true
