[package]
name = "arcon_macros"
version = "0.2.1"
authors = ["Max Meldrum <mmeldrum@kth.se>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/cda-group/arcon"
homepage = "https://github.com/cda-group/arcon"
description = """
Macros for Arcon
"""
edition = "2018"

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
arcon = { version = "0.2", path = "../arcon" }
prost = "0.9"

[lib]
proc-macro = true
