[package]
name = "arcon_state"
version = "0.1.1"
authors = ["Mikołaj Robakowski <mikolajr@kth.se>, Max Meldrum <mmeldrum@kth.se>"]
edition = "2018"
readme = "README.md"
license = "AGPL-3.0-only"
repository = "https://github.com/cda-group/arcon"
homepage = "https://github.com/cda-group/arcon"
description = """
State management features for Arcon
"""

[features]
default = ["sled", "sled_checkpoints", "metrics"]
rocks = ["rocksdb"]
#faster = ["faster-rs", "serde"]
sled_checkpoints = ["sled"]

[dependencies]
prost = "0.7"
bytes = "1.0"
snafu = "0.6"
once_cell = "1.3"
cfg-if = "0.1.10"
sled = { version = "0.34", optional = true }
metrics = { version = "0.16.0", optional = true }



# Downgrade cc 
# https://github.com/rust-rocksdb/rust-rocksdb/issues/474
[build-dependencies.cc]
version = "=1.0.61"
features = ["parallel"]

[dependencies.rocksdb]
default-features = false
features = ["lz4"]
git = "https://github.com/rust-rocksdb/rust-rocksdb.git"
optional = true

#[target.'cfg(target_os = "linux")'.dependencies]
#faster-rs = { version = "0.11", optional = true }

[dev-dependencies]
tempfile = "3"
