[package]
name = "arcon_tests"
version = "0.1.0"
authors = ["Max Meldrum <mmeldrum@kth.se>"]
edition = "2018"
publish = false

[features]
default = ["arcon_serde"]
arcon_serde = ["arcon/arcon_serde"]

[dependencies]
arcon = { path = "../"}
serde = { version = "1.0.104", features = ["derive"] }
abomonation = "0.7.3"
abomonation_derive = "0.5.0"
prost = { git = "https://github.com/Max-Meldrum/prost.git", branch = "derive_generics" }

[build-dependencies]
arcon_build = { path = "../arcon_build"}
