[package]
name = "arcon_util"
version = "0.2.0"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/cda-group/arcon"
homepage = "https://github.com/cda-group/arcon"
description = """
Utilities for Arcon
"""
edition = "2018"

[features]
default = []
hasher = ["mur3"]

[dependencies]
mur3 = { version = "0.1.0", optional = true }