[package]
name = "arcon_proto"
version = "0.1.4"
authors = ["Max Meldrum <mmeldrum@kth.se>"]
readme = "README.md"
repository = "https://github.com/cda-group/arcon_proto"
homepage = "https://github.com/cda-group/arcon_proto"
license = "AGPL-3.0-only"
edition = "2018"
description = """
A library containing the protobuf messages for the Arcon system
"""

exclude = ["scala/*"]

[features]
default = []
operational_plane = []
arconc = ["grpcio", "futures", "protobuf", "protoc-grpcio"]
arcon_spec = ["prost", "bytes", "prost-build", "serde", "serde_json", "failure"]

[dependencies]
futures = { version = "0.1.16", optional = true }
grpcio = { version = "0.4", default-features = false, features = ["protobuf-codec"] , optional = true }
prost = { version = "0.5", optional = true }
protobuf = { version = "2.0", optional = true }
bytes = { version = "0.4", optional = true }
serde = { version = "1.0.103", features = ["derive"], optional = true }
serde_json = { version = "1.0.42", optional = true }
failure = { version = "0.1.5", optional = true }
cfg-if = "0.1.10"


[build-dependencies]
prost-build = { version = "0.5", optional = true }
protoc-grpcio = {version = "0.3.1", optional = true }
cfg-if = "0.1.10"
