[package]
name = "core"
version = "0.1.0"
authors = ["Max Meldrum <mmeldrum@kth.se>"]
edition = "2018"

[features]
default = []

[dependencies]
messages = { path="messages" }
akka-api = { path = "akka-api" }
state-backend = { path = "state-backend" }

http = { path ="http", optional = true }
kafka = { path ="kafka", optional = true }

weld = "0.3.0"
tokio-threadpool = "0.1.11"
futures = "0.1"
regex = "1"
fnv = "1.0.3"

# Middleware
kompact = { git = "https://github.com/kompics/kompact", branch = "master", features = ["protobuf"]}
bytes = "0.4"
tokio = "0.1"

# Logging
slog = "2.2"
slog-async = "2.3"
slog-term = "2.4"

# Kompact IO
tokio-codec = "0.1"

[dev-dependencies]
rand = "0.6.5"

[[bin]]
name = "operator"
path = "src/bin/operator.rs"
bench = false
required-features = ["http"]


[[bin]]
name = "coordinator_test"
path = "src/bin/coordinator_test.rs"
bench = false
