[package]
name = "arcon"
version = "0.1.0"
authors = ["Max Meldrum <mmeldrum@kth.se>"]
edition = "2018"
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/cda-group/arcon"
homepage = "https://github.com/cda-group/arcon"
description = """
Arcon's execution plane
"""

[features]
default = ["proto"]
kafka = ["rdkafka"]
proto = ["protobuf", "protoc-rust"]
capnproto = ["capnp", "derivative", "capnpc"]

[dependencies]
arcon_macros = { path = "arcon_macros" , version = "0.1.0" }
weld = "0.3.0"
kompact = "0.7.0"

futures = "0.1"
regex = "1"
keyby = "0.1.0"
rand = "0.6.5"
fnv = "1.0.3"
tokio = "0.1"
tokio-codec = "0.1"
bytes = "0.4"

# Logging
slog = "2.2"
slog-async = "2.3"
slog-term = "2.4"

# Serialisation
bincode = "1.1.4"
serde = { version = "1.0.63", features = ["derive"] }

# Optional 
rdkafka = { version = "~0.19", optional = true }
protobuf = { version = "2.0", optional = true }
capnp = { version = "0.9.4", optional = true }
derivative = { version = "1.0.2", optional = true }

[dependencies.rocksdb]
version = "0.12.1"
default-features = false
features = ["lz4"]
optional = true

[dev-dependencies]
tempfile = "3"
slog = { version = "2.2", features = ["max_level_off"] }

[build-dependencies]
protoc-rust = {version = "2.0", optional = true }
capnpc = { version = "0.9", optional = true }
