[package]
name = "core"
version = "0.1.0"
authors = ["Max Meldrum <mmeldrum@kth.se>"]
edition = "2018"

[features]
default = []

[dependencies]
messages = { path = "messages" }
akka-api = { path = "akka-api" }
state-backend = { path = "state-backend" }

weld = { git = "https://github.com/weld-project/weld", branch = "master" }
kompact = { git = "https://github.com/kompics/kompact", branch = "master", features = ["protobuf"]}

futures = "0.1"
regex = "1"
fnv = "1.0.3"
tokio = "0.1"
tokio-codec = "0.1"
bytes = "0.4"

# Logging
slog = "2.2"
slog-async = "2.3"
slog-term = "2.4"

# Optional 
http = { path = "http", optional = true }
kafka = { path = "kafka", optional = true }

[dev-dependencies]
rand = "0.6.5"
