[package]
name = "grpc"
version = "0.1.0"
authors = ["Max Meldrum <mmeldrum@kth.se>"]
edition = "2018"
publish = false

[dependencies]
grpcio = { version = "0.4", default-features = false, features = ["protobuf-codec"] }
protobuf = "~2"
futures = "0.1.16"

[build-dependencies]
protoc-grpcio = "0.3.1"
