[package]
name = "arcon_allocator"
version = "0.2.1"
authors = ["Max Meldrum <mmeldrum@kth.se>"]
repository = "https://github.com/cda-group/arcon"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/cda-group/arcon"
description = """
Allocator for Arcon
"""
edition = "2018"

[dependencies]
fxhash = "0.2.1"
snafu = "0.6"
metrics = { version = "0.16.0", optional = true }
