[package]
name = "arcon_state"
version = "0.2.0"
authors = ["Mikołaj Robakowski <mikolajr@kth.se>, Max Meldrum <mmeldrum@kth.se>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/cda-group/arcon"
description = """
State management features for Arcon
"""

[features]
default = ["sled", "sled_checkpoints"]
rocks = ["rocksdb"]
sled_checkpoints = ["sled"]

[dependencies]
prost = "0.9"
bytes = "1.0"
snafu = "0.6"
once_cell = "1.3"
cfg-if = "0.1.10"
sled = { version = "0.34", optional = true }
metrics = { version = "0.16.0", optional = true }

[dependencies.rocksdb]
default-features = false
features = ["lz4"]
version = "0.17"
optional = true

[dev-dependencies]
tempfile = "3"
