[package]
name = "arcon"
version = "0.1.3"
authors = ["Max Meldrum <mmeldrum@kth.se>"]
edition = "2018"
readme = "README.md"
license = "AGPL-3.0-only"
repository = "https://github.com/cda-group/arcon"
homepage = "https://github.com/cda-group/arcon"
description = """
Arcon's execution plane
"""

[features]
default = ["serde"]
arcon_serde = ["serde_json", "bincode", "serde", "uuid/serde", "arcon_macros/arcon_serde"]
kafka = ["rdkafka", "futures", "serde_json", "serde"]
thread_pinning = ["kompact/thread_pinning"]
socket = ["tokio-util", "tokio", "futures", "serde_json", "serde"]
arcon_rocksdb = ["rocksdb"]
arcon_tui = ["tui", "num-rational", "psutil", "serde_json", "size", "crossbeam-channel", "ctrlc", "crossterm", "better-panic"]
arcon_sled = ["sled"]
arcon_sled_checkpoints = []
metered_state_backend = ["once_cell"]
metered_state_backend_rdtsc = ["x86"]
arcon_faster = ["faster-rs", "serde"]
quiet = ["slog"]

[dependencies]
arcon_macros = { version = "0.1", path = "arcon_macros" }
arcon_error = { version = "0.1", path = "arcon_error" }
arcon_extra = { version = "0.1", path = "arcon_extra" }
kompact = { git = "https://github.com/kompics/kompact.git", branch = "master"}
hierarchical_hash_wheel_timer = "1.0"
uuid = "0.8"
static_assertions = "1.1.0"
itertools = "0.8.2"
smallbox = { version = "0.8", features = ["coerce"] }
cfg-if = "0.1.10"
fxhash = "0.2.1"
twox-hash = "1.5.0"
crossbeam-utils = "0.7"
num_cpus = "1.0"
hocon = {version = "0.3", default-features = false, features = ["serde-support"]}

# Serialisation
abomonation = "0.7.3"
abomonation_derive = "0.5.0"
prost = { git = "https://github.com/Max-Meldrum/prost.git", branch = "derive_generics" }
prost-types = "0.6"
bytes = "0.5"

# Optional
rdkafka = { version = "0.23", optional = true }
tokio = { version = "0.2", optional = true, features = ["full"] } # TODO: figure out which are truly needed
tokio-util = { version = "0.2", optional = true, features = ["full"] }
futures = { version = "0.3", optional = true }
serde_json = { version = "1.0.44", optional = true }
serde = { version = "1.0.104", features = ["derive"], optional = true }
bincode = { version = "1.2.1", optional = true }
rocksdb = { git = "https://github.com/mrobakowski/rust-rocksdb.git", branch = "arcon", optional = true } # TODO
slog = { version = "2.2", features = ["release_max_level_off"], optional = true }
rayon = { version = "1.3.0", optional = true }
sled = { git = "https://github.com/mrobakowski/sled.git", optional = true } # TODO
once_cell = { version = "1.3.1", optional = true }

# arcon_tui
tui = { git = "https://github.com/cjbassi/tui-rs", branch = "master", default-features = false, features = ["crossterm"], optional = true}
num-rational = { version = "0.2", optional = true }
psutil = { version = "3.0.0", default-features = false, features = ["cpu", "network", "memory"], optional = true }
size = {version = "0.1.2", optional = true }
crossbeam-channel = { version = "0.4.0", optional = true }
ctrlc = { version = "3.1.3", features = ["termination"], optional = true }
crossterm = { version = "0.17.1", optional = true }
better-panic = {version = "0.2.0", optional = true }

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
x86 = {version = "0.31.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
faster-rs = { version = "0.10.0", optional = true }

[dev-dependencies]
tempfile = "3"
rand = "0.6.5"
slog = { version = "2.2", features = ["max_level_error"] }
criterion = { version = "0.3", features = ['real_blackbox'] }
bincode = "1.1.4"
serde = { version = "1.0.63", features = ["derive"]}
lz4-compression = "0.6.1"
once_cell = "1.3.1"

[[bench]]
name = "allocator"
harness = false

[[bench]]
name = "buffer_pool"
harness = false

[[bench]]
name = "window"
harness = false

[[bench]]
name = "serde"
harness = false

[[bench]]
name = "flight_serde"
harness = false

[[bench]]
name = "hash"
harness = false
