[package]
name = "arcon_codegen"
version = "0.1.0"
authors = ["Max Meldrum <mmeldrum@kth.se>"]
description = "Code generation for Arcon thorugh the use of Quasi-quoting."
edition = "2018"
publish = false

[dependencies]
arcon_spec = { path = "../arcon_spec" }
quote = "0.6"
proc-macro2 = "0.4"
rustfmt-nightly = "1.2.2"
failure = "0.1.5"
lazy_static = "1.3.0"

[dev-dependencies]
arcon = { path = "../arcon" }
trybuild = "1.0"
serde = { version = "1.0.63", features = ["derive"] }
