[package]
name = "arcon_codegen"
version = "0.1.0"
authors = ["Max Meldrum <mmeldrum@kth.se>"]
edition = "2018"
license = "BSD-3-Clause"
repository = "https://github.com/cda-group/arcon"
homepage = "https://github.com/cda-group/arcon"
description = """
Code generation for the Arcon system
"""

[dependencies]
arcon_spec = { path = "../arcon_spec", version = "0.1.0" }
quote = "0.6"
proc-macro2 = "0.4"
rustfmt-nightly = "1.2.2"
failure = "0.1.5"
lazy_static = "1.3.0"

[dev-dependencies]
arcon = { path = "../arcon", version = "0.1.0" }
trybuild = "1.0"
serde = { version = "1.0.63", features = ["derive"] }
