[package]
name = "arcon_codegen"
version = "0.1.4"
authors = ["Max Meldrum <mmeldrum@kth.se>"]
edition = "2018"
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/cda-group/arcon"
homepage = "https://github.com/cda-group/arcon"
description = """
Code generation for Arcon
"""

exclude = ["tests/run-pass/*"]

[dependencies]
arcon_proto = { path = "../../protobuf", version = "0.1", features = ["arcon_spec"] }
quote = "0.6"
proc-macro2 = "0.4"
rustfmt-nightly = "1.2.2"
failure = "0.1.5"
lazy_static = "1.3.0"

[dev-dependencies]
arcon_proto = { path = "../../protobuf", version = "0.1", features = ["arcon_spec"] }
trybuild = "1.0"
serde = { version = "1.0.63", features = ["derive"] }
