[package]
name = "arcon_compiler"
version = "0.1.0"
authors = ["Max Meldrum <mmeldrum@kth.se>"]
description = """
arconc is the Arc backend compiler targeting the Arcon runtime.
"""
edition = "2018"
repository = "https://github.com/cda-group/arcon"
readme = "README.md"

[[bin]]
bench = false
path = "src/main.rs"
name = "arconc"

[dependencies]
arcon_codegen = { path = "../arcon_codegen" }
arcon_spec = { path = "../arcon_spec" }
grpc = { path = "grpc" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
clap = "2.33.0"
failure = "0.1.5"
lazy_static = "1.3.0"
num_cpus = "1"
daemonize = "0.4.1"

# Logging/Reporting
ferris-says = "0.1"
log = "0.4"
pretty_env_logger = "0.3"
