[package]
name = "arcon_compiler"
version = "0.1.1"
authors = ["Max Meldrum <mmeldrum@kth.se>"]
edition = "2018"
readme = "README.md"
license = "AGPL-3.0-only"
repository = "https://github.com/cda-group/arcon"
homepage = "https://github.com/cda-group/arcon"
description = """
arconc is the Arc backend compiler targeting the Arcon runtime.
"""

[[bin]]
bench = false
path = "src/main.rs"
name = "arconc"

[dependencies]
arcon_codegen = { version = "0.1", path = "../arcon_codegen" }
arcon_proto = { path = "../../protobuf", version = "0.1", features = ["arconc", "arcon_spec"] }
grpcio = { version = "0.4", default-features = false, features = ["protobuf-codec"] }
futures = "0.1.16"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
clap = "2.33.0"
failure = "0.1.5"
lazy_static = "1.3.0"
num_cpus = "1"
daemonize = "0.4.1"
path-clean = "0.1.0"

# Logging/Reporting
ferris-says = "0.1"
log = "0.4"
pretty_env_logger = "0.3"

[dev-dependencies]
tempfile = "3"
