[package]
name = "arcon_spec"
version = "0.1.1"
authors = ["Max Meldrum <mmeldrum@kth.se>"]
edition = "2018"
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/cda-group/arcon"
homepage = "https://github.com/cda-group/arcon"
description = """
Implementation of the Arcon Specification
"""

[dependencies]
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
failure = "0.1.5"

[dev-dependencies]
tempfile = "3"
