[package]
name = "examples"
version = "0.1.0"
authors = ["Max Meldrum <mmeldrum@kth.se>"]
edition = "2018"
publish = false

[features]
unsafe_flight = ["arcon/unsafe_flight", "arcon_build/unsafe_flight"]
arcon_serde = ["arcon/arcon_serde", "arcon_build/arcon_serde"]
default = []

[dependencies]
metrics-exporter-prometheus = "0.5.0"
arcon = { path = "../../" , features = ["kafka"]}
prost = "0.7"
serde = { version = "1.0.104", features = ["derive"] }
abomonation = "0.7.3"
abomonation_derive = "0.5.0"
tempfile = "3"
arrow = { version = "4.3", optional = true }
datafusion = { version = "4.0.0", optional = true }
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }
perf-event = "0.4.7"

[build-dependencies]
arcon_build = { path = "../../arcon_build"}