[package]
name = "arcon_backend"
version = "0.1.0"
authors = ["Max Meldrum <mmeldrum@kth.se>"]
edition = "2018"
publish = false

[features]
default = []

[dependencies]
arcon_error = { path = "../arcon_error" }

[dependencies.rocksdb]
version = "0.12.1"
default-features = false
features = ["lz4"]
optional = true

[dev-dependencies]
tempfile = "3"
